# Pico_Template

./: CMakeLists.txt
inc/: led.h
src/: led.c
